test/libsolidity/syntaxTests/parsing/var_storage_var.sol
contract C {
    var a;
}
// ----
// ParserError: (17-20): Function, variable, struct or modifier declaration expected.
